results/SpecGenBench/4-shot/log-PerfectNumber-2023_11_05_04_43_00.txt
class PerfectNumber {
    //@ requires num > 0;
    //@ ensures \result == true <==> (\forall int d; 2 <= d && d * d <= num; (num % d == 0 ==> (d * d < num ==> (\exists int k; sum == 1 + d + num / d + k))));
    //@ ensures \result == false <==> (\exists int d; 2 <= d && d * d <= num; (num % d == 0 && (d * d < num ==> (\forall int k; sum != 1 + d + num / d + k))));
    public boolean isPerfectNumber(int num) {
        if (num == 1) {
            return false;
        }

        int sum = 1;
        //@ maintaining 1 <= sum && sum <= num;
        //@ maintaining (\forall int d; 2 <= d && d * d <= num; (num % d == 0 ==> (d * d < num ==> (\exists int k; sum == 1 + d + num / d + k))));
        //@ decreases num - d;
        for (int d = 2; d * d <= num; ++d) {
            if (num % d == 0) {
                sum += d;
                if (d * d < num) {
                    sum += num / d;
                }
            }
        }
        return sum == num;
    }
}
/home/max/Documents/JMLGPT/tmp/PerfectNumber.java:3: error: cannot find symbol
    //@ ensures \result == true <==> (\forall int d; 2 <= d && d * d <= num; (num % d == 0 ==> (d * d < num ==> (\exists int k; sum == 1 + d + num / d + k))));
                                                                                                                                ^
  symbol:   variable sum
  location: class PerfectNumber
/home/max/Documents/JMLGPT/tmp/PerfectNumber.java:4: error: cannot find symbol
    //@ ensures \result == false <==> (\exists int d; 2 <= d && d * d <= num; (num % d == 0 && (d * d < num ==> (\forall int k; sum != 1 + d + num / d + k))));
                                                                                                                                ^
  symbol:   variable sum
  location: class PerfectNumber
/home/max/Documents/JMLGPT/tmp/PerfectNumber.java:12: error: variable d is already defined in method isPerfectNumber(int)
        //@ maintaining (\forall int d; 2 <= d && d * d <= num; (num % d == 0 ==> (d * d < num ==> (\exists int k; sum == 1 + d + num / d + k))));
                                     ^
3 errors

